crates/snapshot-tests/tests/snapshots/de__missing_required.snap
---
source: snapshot-tests/tests/de.rs
expression: error
---
error[MissingField]: missing field 's' in table
  ┌─ missing_required:1:1
  │
1 │ os = 20
  │ ^^^^^^^ table with missing field
